# dac-12bit-testing

./: .gitignore  README.md
config/: dacdemo.toml  pin_maps.md
config/sweeps/: 2.toml  default.toml
docs/: agents.md  command_reference.md  measurement_calculations.md  pin_map_analysis.md  quickstart.md  sa_scpi_validated.md  setup_and_testing.md  workflow.md
firmware/Arduino_DAC_framework/: Arduino_DAC_framework.ino
host/: pyproject.toml  requirements.txt
host/dacdemo/: ad3_capture.py  board_control.py  cli.py  coherent_tone.py  comprehensive_analysis.py  config.py  discover.py  psu_control.py  scope_control.py  serial_utils.py  sfdr_analysis.py  siganalyzer_control.py  siggen_control.py  sine_gen.py  snr_analysis.py
host/scripts/: dacdemo.py
instrument_comms/: README.md
instrument_comms/examples/: 01_visa_connection.py  02_keysight_scope.py  03_keithley_supply.py  04_rs_siggen.py  05_analog_discovery.py  06_keysight_supply.py  07_full_measurement_session.py
instrument_comms/instruments/: __init__.py  analog_discovery.py  dwfconstants.py  keithley_supply.py  keysight_exa.py  keysight_scope.py  keysight_supply.py  rs_siggen.py
instrument_comms/signal_analyzer/: SCPI_commands.md  plan1.md
legacy/: calc_fin.m  legacy_8027_DAC_Arduino_test.py
legacy/sketch/Arduino_DAC_control_sketch/: Arduino_DAC_control_sketch.ino
lib/Ina219Rails/: Ina219Rails.cpp  Ina219Rails.h  keywords.txt  library.properties
tools/: capture_validate.py  discover_instruments.py
tools/legacy/: README.md  check_env.py  list_instruments.py  verify_instruments.py
(+7 files in other folders)
